--- a/mladja_pesaka/index.html
+++ b/mladja_pesaka/index.html
@@ -76,7 +76,7 @@
     </div>
   </section><!-- End Hero Section -->
 
-  ain id="main">
+  <main id="main">
 
     <!-- ======= Featured Services Section ======= -->
      <!-- ======= Featured Services Section ======= -->
@@ -254,18 +254,18 @@
     </section><!-- End Features Section -->
 
     <!-- ======= Pricing Section ======= -->
-    <section id="pricing" class="pricing pt-0">
-      <div class="container" data-aos="fade-up">
+    <section id="pricing" class="pricing-main">
+      <div class="seccontainer" data-aos="fade-up">
 
         <div class="section-header">
-          <span>Pricing</span>
+         
           <h2>Pricing</h2>
 
         </div>
 
-        <div class="row gy-4">
+        <div class="pricingcont">
 
-          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
+          <div class="pricing" data-aos="fade-up" data-aos-delay="100">
             <div class="pricing-item">
               <h3>Indicators report</h3>
               <h4><sup>$</sup>10<span> / month</span></h4>
@@ -280,7 +280,7 @@
             </div>
           </div><!-- End Pricing Item -->
 
-          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
+          <div class="pricing" data-aos="fade-up" data-aos-delay="200">
             <div class="pricing-item featured">
               <h3>SWOT </h3>
               <h4><sup>$</sup>29<span> / month</span></h4>
@@ -295,7 +295,7 @@
             </div>
           </div><!-- End Pricing Item -->
 
-          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
+          <div class="pricing" data-aos="fade-up" data-aos-delay="300">
             <div class="pricing-item">
               <h3>Statistics Report</h3>
               <h4><sup>$</sup>49<span> / month</span></h4>
@@ -320,7 +320,7 @@
 
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials">
-      <div class="container">
+      <div class="seccontainer">
 
         <div class="slides-1 swiper" data-aos="fade-up">
           <div class="swiper-wrapper">
@@ -414,7 +414,7 @@
 
     <!-- ======= Frequently Asked Questions Section ======= -->
     <section id="faq" class="faq">
-      <div class="container" data-aos="fade-up">
+      <div class="seccontainer" data-aos="fade-up">
 
         <div class="section-header">
           <span>Frequently Asked Questions</span>
