--- a/mladja_pesaka/index.html
+++ b/mladja_pesaka/index.html
@@ -7,8 +7,8 @@
     <title>Benchmarking</title>
 
     <link rel="stylesheet" href="main.css">
-    <link href="assets/img/favicon.png" rel="icon">
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="img/favicon.png" rel="icon">
+    <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 </head>
 <body>
     <header id="header" class="header">
@@ -98,20 +98,22 @@
 
         <div class="row gy-4">
           <div class="col-lg-6 position-relative align-self-start order-lg-last order-first">
-            <img src="assets/img/abou.png" class="img-fluid" alt="">
+            <img src="img/abou.png" class="ben" alt="">
             <a href="https://www.youtube.com/watch?v=-WkpBfimxTI" class="glightbox play-btn"></a>
           </div>
-          <div class="col-lg-6 content order-last  order-lg-first">
+          <div class="why">
             <h3>Why do You need Benchmarking </h3>
             <br>
             <p>
               A benchmark is a standard against which something is compared. Investors use benchmarks to measure
                the performance of securities, mutual funds, exchange-traded funds, portfolios, or other investment instruments.
             </p>
+            <br>
             <p>
               When evaluating your investment portfolio's performance, it's important to compare it against a benchmark representing the industry,
                sector, and market segment to which it belongs.
             </p>
+            <br>
           </div>
         </div>
 
@@ -119,43 +121,43 @@
     </section><!-- End About Us Section -->
 
     <!-- ======= Services Section ======= -->
-    <section id="service" class="services pt-0">
-      <div class="container" data-aos="fade-up">
+    <section id="service" class="service">
+      <div class="services">
 
         <div class="section-header">
-          <span>Our Services</span>
+          
           <h2>Our Services</h2>
 
         </div>
 
-        <div class="row gy-4">
+        <div class="servwrap">
 
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="servitem" >
             <div class="card">
               <div class="card-img">
-                <img src="assets/img/storage-service.jpg" alt="" class="img-fluid">
+                <img src="img/storage-service.jpg" alt="" class="img-fluid">
               </div>
-              <h3><a href="service-details.html" class="stretched-link">Indicators(KPI)</a></h3>
+              <h3><a href="service-details.html" class="stretched-link">Indicators(KPI)</a></h3> <br>
               <p>A set of quantifiable measurements used to gauge a company's overall long-term performance</p>
             </div>
           </div><!-- End Card Item -->
 
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+          <div class="servitem">
             <div class="card">
               <div class="card-img">
-                <img src="assets/img/logistics-service1.png" alt="" class="img-fluid">
+                <img src="img/logistics-service1.png" alt="" class="img-fluid">
               </div>
-              <h3><a href="service-details.html" class="stretched-link">Statistics</a></h3>
+              <h3><a href="service-details.html" class="stretched-link">Statistics</a></h3> <br>
               <p>Statistics examination including correlation and regression analysis</p>
             </div>
           </div><!-- End Card Item -->
 
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+          <div class="servitem" >
             <div class="card">
               <div class="card-img">
-                <img src="assets/img/cargo-service1.png" alt="" class="img-fluid">
+                <img src="img/cargo-service1.png" alt="" class="img-fluid">
               </div>
-              <h3><a href="service-details.html" class="stretched-link">SWOT</a></h3>
+              <h3><a href="service-details.html" class="stretched-link">SWOT</a></h3> <br>
               <p>Dicta quam similique quia architecto eos nisi aut ratione aut ipsum reiciendis sit doloremque oluptatem aut et molestiae ut et nihil</p>
             </div>
           </div><!-- End Card Item -->
@@ -169,14 +171,14 @@
 
     <!-- ======= Features Section ======= -->
     <section id="features" class="features">
-      <div class="container">
+      <div class="servcont">
 
         <div class="row gy-4 align-items-center features-item" data-aos="fade-up">
 
           <div class="col-md-5">
-            <img src="assets/img/features1.png" class="img-fluid" alt="">
+            <img src="img/features1.png" class="img-fluid" alt="">
           </div>
-          <div class="col-md-7">
+          <div class="sub">
             <h3>Key Performance Indicators(KPI) </h3>
             <p class="fst-italic">
               Key performance indicators (KPIs) refer to a set of quantifiable measurements used to gauge a company’s overall long-term performance. 
@@ -195,9 +197,9 @@
 
         <div class="row gy-4 align-items-center features-item" data-aos="fade-up">
           <div class="col-md-5 order-1 order-md-2">
-            <img src="assets/img/features2.png" class="img-fluid" alt="">
+            <img src="img/features2.png" class="img-fluid" alt="">
           </div>
-          <div class="col-md-7 order-2 order-md-1">
+          <div class="sub">
             <h3>Statistical analysis</h3>
             <p class="fst-italic">
               Statistics are used in virtually all scientific disciplines such as the physical and social sciences, 
@@ -217,7 +219,7 @@
           <div class="col-md-5">
             <img src="assets/img/features3.png" class="img-fluid" alt="">
           </div>
-          <div class="col-md-7">
+          <div class="sub">
             <h3>SWOT</h3>
             <p class="fst-italic">
               A framework used to evaluate a company's 
@@ -236,9 +238,9 @@
 
         <div class="row gy-4 align-items-center features-item" data-aos="fade-up">
           <div class="col-md-5 order-1 order-md-2">
-            <img src="assets/img/features4.png" class="img-fluid" alt="">
+            <img src="img/features4.png" class="img-fluid" alt="">
           </div>
-          <div class="col-md-7 order-2 order-md-1">
+          <div class="sub">
             <h3>Quas et necessitatibus eaque impedit ipsum animi consequatur incidunt in</h3>
             <p class="fst-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
